@@ -1,5 +1,9 @@
 2008-07-14  Mirco Bauer <meebey@meebey.net> 
 
+	
+
+2008-07-14  Mirco Bauer <meebey@meebey.net> 
+
 	* Config/Config.cs: Added OFTC, GIMPNet, EFnet, IRCnet and freenode as
 	  default IRC servers.
 	
