@@ -1,3 +1,7 @@
+2008-07-14  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Fixed CommandCycle().
+
 2008-07-07  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Implemented lag indicator.
